<resources>
    <string name="app_name">PC Web</string>
    <string name="appName">PC Web</string>
    <string name="loginHeading">PC Web</string>
    <string name="loginSubHeading">Mobile UI Kit</string>
    <string name="LoginEmailAddress">Email Address</string>
    <string name="loginPassword">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="newMember">New member?</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="hintFirstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="registerEmail">Email</string>
    <string name="hintEmail">Email</string>
    <string name="registerTelephone">Telephone</string>
    <string name="hintTelephone">Telephone</string>
    <string name="registerFax">Fax</string>
    <string name="hintFax">Fax</string>
    <string name="registerCompany">Company</string>
    <string name="hintCompany">Company</string>
    <string name="registerAddress1">Address 1</string>
    <string name="hintAddress1">Address 1</string>
    <string name="registerAddress2">Address 2</string>
    <string name="hintAddress2">Address 2</string>
    <string name="registerCity">City</string>
    <string name="hintCity">City</string>
    <string name="registerPostCode">Post Code</string>
    <string name="hintPostCode">Post Code</string>
    <string name="registerCountry">Country</string>
    <string name="hintCountry">India</string>
    <string name="registerState">Region / State</string>
    <string name="hintState">Region / State</string>
    <string name="registerPassword">Password</string>
    <string name="hintPassword">Password</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="registerRadioYes">Yes</string>
    <string name="registerRadioNo">No</string>
    <string name="registerNewsletter">Newsletter</string>
    <string name="registerSubscribe">Subscribe : </string>
    <string name="signUp_button">Submit</string>
    <string name="yourPersonalDetails">Your Personal Details</string>
    <string name="yourAddress">Your Address</string>
    <string name="yourPassword">Your Password</string>
    <string name="privacyPolicy">I have read and agree to the Privacy Policy</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="totalPrice">00</string>
    <string name="total">Total</string>
    <string name="bagDiscount">Bag Discount</string>
    <string name="bagDiscountPrice">50</string>
    <string name="couponDiscount">Coupon Discount</string>
    <string name="couponDiscountPrice">50</string>
    <string name="delivery">Delivery</string>
    <string name="deliveryPrice">00</string>
    <string name="totalPayable">Total Payable</string>
    <string name="totalPayablePrice">00</string>
    <string name="cartPlaceOrder">Select Address</string>

    <string name="profile">Profile</string>
    <string name="orderHistory">Order History</string>
    <string name="gallery">Gallery</string>
    <string name="aboutUs">About Us</string>
    <string name="termAndCondition">Term and Condition</string>
    <string name="profileName">Name</string>
    <string name="profilePersonName">Sam</string>
    <string name="profileEmail">Email</string>
    <string name="profilePersonEmail">sam123@gmail.com</string>
    <string name="profileAddress">Address</string>
    <string name="profilePersonAddress">West Bengal</string>
    <string name="home">PC Web</string>
    <string name="signUp">SignUp</string>
    <string name="productDescription">Product Description</string>
    <string name="frequentlyBought">Frequently Bought Together</string>
    <string name="availableSlot">Your available slot : </string>
    <string name="description">Product Description: </string>


    <string name="featuresName">Features</string>
    <string name="infoName">Info</string>

    <string name="shelfLifeName">Shelf Life</string>;
    <string name="shelfLifeValue">7 days</string>
    <string name="manufacturerDetailsName">Manufacturer Details</string>;
    <string name="manufacturerDetailsValue">Ninjacarts 63 Ideas infolabs Pvt. Ltd\n9th floor, Wework Buliding.Outer Ring Road. Near central mall,\nBellandur, Bangalore-560103</string>
    <string name="marketedByName">Marketed By</string>;
    <string name="marketedByValue">Ninjacarts 63 Ideas infolabs Pvt. Ltd</string>
    <string name="sellerName">Seller</string>;
    <string name="sellerValue">MOVEON DELIVERY INTIME PRIVATE LIMITED\n(https://bit.ly/2QuoDoc)</string>
    <string name="unitName">Unit</string>;
    <string name="unitValue">1 unit</string>
    <string name="disclaimerName">Disclaimer</string>;
    <string name="disclaimerValue">Every effor is made to maintain accuracy of all information.\nHowever, actual packaging and materials may contain\nmore and/or different information. It is recommended not to\nsolely rely on the information presented</string>
    <string name="offerName">Offer</string>;
    <string name="offerValue"></string>


    <string name="seeAll">See all</string>
    <string name="productList">Product List</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="addressList">Address List</string>
    <string name="payment">Payment</string>
    <string name="cod">Order Summery</string>
    <string name="price">Product Price :</string>
    <string name="deliveryOption">Delivery Option :</string>
    <string name="pabdaSize">Unit :</string>
    <string name="orderQuantity">Order Quantity :</string>
    <string name="skip">Skip For Now</string>
    <string name="loginSignUp">Login/SignUp</string>
    <string name="profileForgotPassword">Change Password</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">New Password</string>
    <string name="enterRepeatPassword">Repeat Password</string>
    <string name="privacyPolicyToolbar">Privacy Policy</string>
    <string name="customerDetails">Add Delivery Address</string>
    <string name="editCustomerDetails">Edit Customer Details</string>
    <string name="orderHistoryDetails">Order History Details</string>
    <string name="shipingAddress">Shipping Address</string>
    <string name="billingAddress">Billing Address</string>
    <string name="convenienceCharge">Convenience Charge</string>
    <string name="totalconvenienceCharge">Total (incl. Convenience Charge)</string>
    <string name="profileCity">City</string>
    <string name="profileState">State</string>
    <string name="profilePostalCode">Postal Code</string>
    <string name="profileCountry">Country</string>
    <string name="profileIndia">India</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoryList">Category List</string>
    <string name="nav_header_title">Guest</string>
    <string name="searchList">Search List</string>
    <string name="subCategoryList">Sub Category List</string>
    <string name="stock">Stock : </string>
    <string name="mobileNo">Mobile No. </string>
    <string name="contactUs">Contact Us</string>

</resources>
