<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragment.ProductFeaturesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="?android:listPreferredItemPaddingLeft"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:text="@string/shelfLifeName"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:paddingBottom="10dp"
            android:text="@string/shelfLifeValue"
            android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="?android:listPreferredItemPaddingLeft"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:text="@string/unitName"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:paddingBottom="10dp"
            android:text="@string/unitValue"
            android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="?android:listPreferredItemPaddingLeft"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:text="@string/disclaimerName"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="45dp"
            android:paddingBottom="10dp"
            android:text="@string/disclaimerValue"
            android:textSize="12dp" />

    </LinearLayout>
</FrameLayout>