<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/loginLayout"
    android:background="@color/whiteBackgroundColor"
    tools:context=".Activity.LoginActivity">

    <!--<TextView-->
        <!--style="@style/headingName"-->
        <!--android:text="@string/loginHeading"-->
        <!--android:textSize="35sp"/>-->

    <!--<TextView-->
        <!--style="@style/subHeadingName"-->
        <!--android:text="@string/loginSubHeading"-->
        <!--android:layout_marginBottom="60dp"/>-->


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        android:layout_marginBottom="40dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/LoginEmailAddress"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:fontFamily="@font/avenir"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPassword"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:fontFamily="@font/avenir" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/subHeadingName"
        android:text="@string/forgotPassword"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/loginButton"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_button"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/skipForNow"
        style="@style/subHeadingName"
        android:text="@string/skip"
        android:layout_marginTop="5dp"/>

    <TextView
        style="@style/subHeadingName"
        android:text="@string/newMember"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/registerCreateAccount"
        style="@style/headingName"
        android:text="@string/createAccount"
        android:layout_marginTop="8dp"
        android:textSize="15dp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_load"
        android:layout_gravity="center_horizontal"
        android:layout_width="30dp"
        android:layout_height="30dp" />

</LinearLayout>