<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/whiteBackgroundColor"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.CustomerDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/toolBar"
        android:id="@+id/customerDetailsToolbar"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            style="@style/backStyle"
            android:id="@+id/backBtn"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/toolBarHeading"
                android:text="@string/editCustomerDetails"
                android:textColor="@color/whiteBackgroundColor"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteBackgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:background="@color/whiteBackgroundColor">

            <TextView
                style="@style/signUpTextView"
                android:text="@string/yourPersonalDetails"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginTop="5dp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintFirstName"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    style="@style/registerEditText"
                    android:inputType="textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintLastName"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    style="@style/registerEditText"
                    android:inputType="textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintTelephone"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_telephone"
                    style="@style/registerEditText"
                    android:inputType="phone"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/signUpTextView"
                android:text="@string/yourAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginTop="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintAddress1"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address1"
                    style="@style/registerEditText"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintAddress2"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address2"
                    style="@style/registerEditText"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hintCity"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    style="@style/registerEditText"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/hintPostCode"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_post_code"
                    style="@style/registerEditText"
                    android:inputType="number"
                    android:maxLength="6"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="state"
                android:background="@drawable/state_list_background">

            </Spinner>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/registerCountry"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_country"
                    style="@style/registerEditText"
                    android:text="@string/hintCountry"
                    android:focusable="false"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/loginButton"
                android:layout_marginTop="10dp"
                android:text="@string/signUp_button"
                android:id="@+id/updateBtn"
                android:background="@drawable/button_green"
                android:textColor="#fff"
                android:onClick="updateUserData"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>